--- a/package.json
+++ b/package.json
@@ -15,6 +15,9 @@
     "stylelint": "13.6.1",
     "stylelint-config-htmlacademy": "0.1.4"
   },
+  "dependencies": {
+    "normalize.css": "^8.0.1"
+  },
   "scripts": {
     "editorconfig": "editorconfig-cli",
     "stylelint": "stylelint \"source/sass/**/*.scss\" --syntax scss",
